# gp-data-v4

./: .dockerignore  .env.example  .gitignore  .testmondata-shm  .testmondata-wal  Dockerfile  MONGODB_INTEGRATION.md  main.py  pyproject.toml  setup_mongodb.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: config.py
src/agents/: classifier_agent.py  director_agent.py  executor_agent.py
src/api/: dependencies.py  main.py
src/core/: __init__.py  cli_runner.py  conversation_orchestrator.py
src/gp_data_v4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/message_queue/: __init__.py  base.py  buffer.py  memory.py  worker.py
src/models/: base.py  classifier_response.py  director_response.py  executor_response.py  intelligence.py  lead.py  message.py
src/repositories/: __init__.py  base.py  connection.py  leads.py  messages.py
src/services/: __init__.py  followup_scheduler.py  handoff_service.py  message_repository.py  twilio_service.py
src/utils/: __init__.py  circuit_breaker.py  cost_tracker.py  fallback_responses.py  llm_client.py  metrics.py  observability.py  phone_normalizer.py  rate_limiter.py  security_validator.py  twilio_signature.py
tests/: conftest.py  test_lead_models.py
tests/agents/: test_classifier_agent.py  test_director_agent.py  test_executor_agent.py
tests/api/: test_health.py  test_main.py  test_metrics.py  test_webhooks.py
tests/core/: __init__.py  test_conversation_orchestrator.py
tests/message_queue/: __init__.py  test_buffer.py  test_memory_queue.py  test_worker.py
tests/models/: test_lead.py  (+2 more)
(+21 files in other folders)
