[project]
name = "gp-data-v4"
version = "0.1.0"
description = "Production multi-agent AI system architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "openai>=1.50.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pydantic-ai[openai]>=1.39.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
